spacing corrections

--- a/src/components/landing_page/Landing.css
+++ b/src/components/landing_page/Landing.css
@@ -1,4 +1,4 @@
-body {
+.body {
   background-color: black;
   justify-content: center;
   height: 90vh;
